[package]
name = "tokio2-socks5"
version = "0.1.0"
authors = ["klu-dev <kai.lu@citrix.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7"
